# flatterer

./: .buildinfo  .clippy.toml  .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  changelog.html  development.html  docker-entrypoint.sh  genindex.html  index.html  inputs.html  library.html  objects.inv  options.html  outputs.html  pyproject.toml  requirements_docs.in  requirements_docs.txt  s3.html  search.html  searchindex.js  web.html
.github/workflows/: dist.yml  docs.yml  test.yml
_sources/: changelog.md.txt  development.md.txt  index.md.txt  inputs.md.txt  library.md.txt  options.md.txt  outputs.md.txt  s3.md.txt  web.md.txt
_static/: documentation_options.js
docs/: changelog.md  conf.py  development.md  index.md  library.md  options.md  outputs.md
fixtures/: basic.jl  basic.json
fixtures/basic_expected/: data_package.json  fields.csv  tables.csv
fixtures/basic_expected/csv/: developer.csv  main.csv  platforms.csv
fixtures/basic_expected/postgresql/: postgresql_load.sql  postgresql_schema.sql
fixtures/basic_expected/sqlite/: sqlite_load.sql
fixtures/expected_basic/: data_package.json  fields.csv  output.xlsx
fixtures/expected_basic/csv/: developer.csv  main.csv
fixtures/expected_basic_inline/: data_package.json  fields.csv  output.xlsx
fixtures/expected_basic_inline/csv/: main.csv  platforms.csv
fixtures/pushdown_expected/: datapackage.json  fields.csv
fixtures/pushdown_expected/csv/: developer.csv  platforms.csv
flatterer/: __init__.py  tests.py
flatterer/static/: index.html
flatterer/static/assets/: index.824ae5b0.css  index.ea71dcc5.js
flatterer/static/css/: chunk-vendors.2e787a64.css
flatterer/static/js/: about.81ef6e5f.js  about.81ef6e5f.js.map  app.0d2f5f30.js  app.0d2f5f30.js.map  chunk-vendors.4342f450.js  chunk-vendors.4342f450.js.map
src/: lib.rs  main.rs  postgresql.rs  schema_analysis.rs  schema_order.rs
