[package]
name = "flatterer"
version = "0.13.1"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
crossbeam-channel="0.5"
serde_json = { version = "1", features = ["preserve_order"] }
pyo3 = {version = "0.16.3", features = ["extension-module", "eyre"] }
eyre={version = "0.6.8"}
#libflatterer={path = "../libflatterer"}
libflatterer={version = "0.13.1"}
env_logger="0.9"
log="0.4"
ctrlc="3.2.1"
datapackage_convert = "0.3.0"
num_cpus = "1.13.1"

[profile.release]
debug = true

[lib]
name = "flatterer"
path = "src/lib.rs"

crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flatterer-cli"
path = "src/main.rs"
