[package]
name = "flatterer"
version = "0.0.2"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
crossbeam-channel= "0.5.6"
serde_json = { version = "1.0.83", features = ["preserve_order"] }
pyo3 = { version = "0.16.5", features = ["extension-module", "eyre"] }
eyre= "0.6.8"
#libflatterer={path = "../libflatterer"}
libflatterer= "0.16.0"
#flatterer-web={path = "../flatterer-web"}
flatterer-web="0.16.1"
env_logger= "0.9.0"
log= "0.4.17"
ctrlc= "3.2.2"
datapackage_convert = "0.6.1"
num_cpus = "1.13.1"
multi_reader = "0.1.0"

[profile.release]
strip = true 

[lib]
name = "flatterer"
path = "src/lib.rs"

crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flatterer-cli"
path = "src/main.rs"
