[project]
name="flatterer"
description = "Opinionated JSON to CSV converter"
dependencies = ["orjson", "ijson", "click"]
readme="README.md"
repository="https://github.com/kindly/flatterer"
homepage="https://flatterer.opendata.coop/index.html"
documentation="https://flatterer.opendata.coop/index.html"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[project.scripts]
flatterer = "flatterer:cli"
